Working on event

--- a/public/event/index.html
+++ b/public/event/index.html
@@ -18,25 +18,17 @@
 <body>
 <!--
 Loading template
-
+-->
 <div class="loading d-flex flex-column justify-content-center text-white bg-dark">
     <div class="container text-center">
         <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
         <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
     </div>
 </div>
--->
+
 
 <div class="nav-placeholder"></div>
-<nav aria-label="breadcrumb" class="bg-purple text-white">
-    <div class="container">
-        <ol class="breadcrumb bg-transparent px-0 m-0">
-            <li class="breadcrumb-item"><a href="#" class="text-white">Home</a></li>
-            <li class="breadcrumb-item"><a href="#" class="text-white">Library</a></li>
-            <li class="breadcrumb-item" class="text-white">Data</li>
-        </ol>
-    </div>
-</nav>
+<div class="breadcrumb-placeholder"></div>
 <div class="section top mt-5">
     <div class="container">
         <div class="row">
