--- a/public/about/index.html
+++ b/public/about/index.html
@@ -14,14 +14,7 @@
 </head>
 
 <div class="nav-placeholder"></div>
-<nav aria-label="breadcrumb" class="bg-warning text-dark">
-    <div class="container">
-        <ol class="breadcrumb bg-transparent px-0 m-0">
-            <li class="breadcrumb-item"><a href="#" class="text-dark">Home</a></li>
-            <li class="breadcrumb-item"><a href="#" class="text-dark">About us</a></li>
-        </ol>
-    </div>
-</nav>
+<div class="breadcrumb-placeholder" color="warning"></div>
 
 
 <div class="container my-5 py-4">
@@ -52,5 +45,7 @@
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 </body>
 </html>
