--- a/public/book/index.html
+++ b/public/book/index.html
@@ -62,7 +62,8 @@ Loading template
 </div>
 
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder"></div>
+<div class="breadcrumb-placeholder" color="pink"></div>
+
 <div class="section top mt-5">
     <div class="container">
         <div class="row">
@@ -344,6 +345,9 @@ Loading template
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
+
 <script src="/lib/multislider/multislider.js"></script>
 <script src="book.js" type="module"></script>
 
