--- a/public/discover/index.html
+++ b/public/discover/index.html
@@ -15,6 +15,7 @@
 
 <body>
 <div class="nav-placeholder"></div>
+<div class="breadcrumb-placeholder" color="pink"></div>
 <nav aria-label="breadcrumb" class="bg-pink text-white">
     <div class="container">
         <ol class="breadcrumb bg-transparent px-0 m-0">
@@ -109,6 +110,8 @@
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 <script src="discover.js"></script>
 
 </body>
