--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,16 @@
             </div>
         </div>
     </div>
-    <div class="row align-self-center">
-        <a href="#whats-new" class="fa fa-chevron-down text-white text-decoration-none"></a>
-    </div>
 </div>
+<div class="d-flex justify-content-center" style="margin-top: -100px">
+    <a href="#surprise" class="text-decoration-none">
+        <div class="wrapper text-center text-decoration-none">
+            <h5 class="text-white text-decoration-none">Surprise me!</h5>
+            <i id="surprise"  class="fa fa-2x fa-chevron-down text-white text-decoration-none"></i>
+        </div>
+    </a>
+</div>
+
 
 <!-- LATEST -->
 <div class="whats-new" id="whats-new">
@@ -50,7 +56,8 @@
             <div class="row align-items-baseline">
                 <div class="col-12 col-sm-auto">
                     <div class="row">
-                        <h3>What's new</h3><h3 class="d-none d-sm-block px-2">|</h3>
+                        <h3>What's new</h3>
+                        <h3 class="d-none d-sm-block px-2">|</h3>
                     </div>
                 </div>
                 <div class="col-12 col-sm-auto p-0">
@@ -147,7 +154,8 @@
             <div class="row align-items-baseline">
                 <div class="col-12 col-sm-auto">
                     <div class="row">
-                        <h3>Bestsellers</h3><h3 class="d-none d-sm-block px-2">|</h3>
+                        <h3>Bestsellers</h3>
+                        <h3 class="d-none d-sm-block px-2">|</h3>
                     </div>
                 </div>
                 <div class="col-12 col-sm-auto p-0">
@@ -279,7 +287,8 @@
             <div class="row align-items-baseline">
                 <div class="col-12 col-sm-auto">
                     <div class="row">
-                        <h3>Our favorite readings</h3><h3 class="d-none d-sm-block px-2">|</h3>
+                        <h3>Our favorite readings</h3>
+                        <h3 class="d-none d-sm-block px-2">|</h3>
                     </div>
                 </div>
                 <div class="col-12 col-sm-auto p-0">
@@ -367,65 +376,12 @@
             </div>
         </div>
     </div>
-
-    <!--FOOTER-->
-    <div class="row bg-dark m-0 h-100">
-        <div class="flex-column w-100 text-center mt-3">
-        <a class="fa text-white text-decoration-none fa-2x fa-angle-up" href="#top"></a>
-        </div>
-        <div class="container text-white">
-            <div class="row py-5">
-                <div class="col-3 d-none d-md-block">
-                    <a class="navbar-brand-b" href="/">
-                        <img src="/assets/logo_white.png"/>
-                    </a>
-                </div>
-                <div class="col-6 col-md-3 px-3">
-                    <ul class="px-0 link-pink">
-                        <a class="text-light" href="">All the books</a><br>
-                        <a class="text-light" href="">The latest books</a><br>
-                        <a class="text-light" href="">All genres</a><br>
-                        <a class="text-light" href="">All themes</a><br>
-                        <a class="text-light" href="">Bestsellers</a><br>
-                        <a class="text-light" href="">Our favorites</a><br>
-                    </ul>
-                </div>
-                <div class="col-6 col-md-3 px-3 mb-5">
-                    <div class="link-danger">
-                        <a class="text-light" href="">All the authors</a><br>
-                    </div>
-                    <div class="link-purple py-2">
-                        <a class="text-light" href="">All the events</a><br>
-                    </div>
-                    <div class="link-warning">
-                        <a class="text-light" href="">About us</a><br>
-                        <a class="text-light" href="">Contact us</a><br>
-                        <a class="text-light" href="">Ordering & Shipping</a>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 px-3">
-                    <div class="row w-100">
-                        <a class="fa fa-facebook-f fa-2x mx-auto"></a>
-                        <a class="fa fa-twitter fa-2x mx-auto"></a>
-                        <a class="fa fa-instagram fa-2x mx-auto"></a>
-                    </div>
-                </div>
-        </div>
-            <div class="row">
-                <div class="col-12 pb-5 text-center">
-                <span class="text-light">Made thanks to the <i class="fa fa-handshake-o"></i> of engineers with a super friendly designer</span><br><br>
-                    <span class="text-light">©Hypermedia Applications - Politecnico di Milano 2019</span><br>
-                    <span class="text-light">Alberto Mario Bellini <i class="fa fa-magic"></i> - Gianpaolo Di Pietro <i class="fa fa-server"></i> - Luna Alessia Rota <i class="fa fa-pencil"></i></span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--END OF FOOTER-->
 </div>
 
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 <script src="/index.js" type="module"></script>
 
 
