--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -16,6 +16,7 @@
 
 <body>
 <div class="nav-placeholder"></div>
+<div class="breadcrumb-placeholder" color="pink"></div>
 <div class="container-fluid bg-primary px-0">
     <div class="container h-100">
         <h5 class="text-white my-auto title py-3">Shopping cart</h5>
@@ -92,6 +93,8 @@
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 <script src="/profile/cart/cart.js" type="module"></script>
 
 </body>
