--- a/public/profile/order/index.html
+++ b/public/profile/order/index.html
@@ -16,6 +16,7 @@
 
 <body class="bg-dark text-white">
 <div class="nav-placeholder"></div>
+<div class="breadcrumb-placeholder" color="pink"></div>
 <div class="container-fluid bg-secondary px-0">
     <div class="container h-100">
         <h5 class="text-white my-auto font-weight-bold py-3">My orders</h5>
@@ -28,6 +29,8 @@
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 <script src="order.js" type="module"></script>
 
 </body>
