--- a/public/register/index.html
+++ b/public/register/index.html
@@ -17,6 +17,7 @@
 <body class="bg-dark">
 
 <div class="nav-placeholder"></div>
+<div class="breadcrumb-placeholder" color="pink"></div>
 <div class="section container main text-white">
     <div class="row" id="registration-form">
         <div class="col-12 mt-5">
@@ -110,6 +111,8 @@
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 <script src="register.js" type="module"></script>
 <script src="calendar.js" type="module"></script>
 
