--- a/public/event/index.html
+++ b/public/event/index.html
@@ -28,7 +28,8 @@ Loading template
 
 
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder"></div>
+<div class="breadcrumb-placeholder" color="pink"></div>
+
 <div class="section top mt-5">
     <div class="container">
         <div class="row">
@@ -221,6 +222,8 @@ Loading template
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 <script src="/lib/multislider/multislider.js"></script>
 <script src="event.js" type="module"></script>
 
