--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -16,9 +16,10 @@
 
 <body>
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder"></div>
+<div class="breadcrumb-placeholder" color="pink"></div>
 
-<div class="container-fluid bg-purple px-0">
+
+<div class="container-fluid bg-purple px-0 ">
     <div class="container h-100">
         <h3 class="text-white my-auto title py-3">Events</h3>
     </div>
@@ -67,6 +68,8 @@
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 <script src="/search/event/event.js" type="module"></script>
 
 
