--- a/public/search/genre/index.html
+++ b/public/search/genre/index.html
@@ -29,7 +29,8 @@ Loading template
 
 
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder"></div>
+<div class="breadcrumb-placeholder" color="pink"></div>
+
 
 <div class="container-fluid genre">
     <div class="container text-white py-5">
@@ -69,6 +70,8 @@ Loading template
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
+<script src="/components/breadcrumb/breadcumb.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 <script src="search.js" type="module"></script>
 
 
