--- a/public/profile/wishlist/index.html
+++ b/public/profile/wishlist/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>More</title>
+    <title>Your wishlist</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/components/loading/loading.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
-    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="wishlist.css">
 
 
 </head>
@@ -37,20 +37,9 @@ Loading template
     <div class="container text-white py-5">
         <form class="search-form">
             <div class="row">
-                <div class="col-12 col-md">
-                    <h2 class="name text-capitalize"></h2>
+                <div class="col">
+                    <h2 class="name text-capitalize">Your wishlist</h2>
 
-                </div>
-                <div class="col-12 col-md-auto px-0">
-                    <select name="orderby"
-                            class="text-capitalize form-control no-glow custom-select custom-select-lg bg-dark rounded-pill text-white filter orderby">
-                        <option selected value="default">order by</option>
-                        <option value="price">price</option>
-                        <option value="author">author</option>
-                        <option value="name">name</option>
-                        <option value="year">year</option>
-
-                    </select>
                 </div>
             </div>
             <input type="text" name="keyword" class="d-none keyword" value="">
@@ -90,7 +79,7 @@ Loading template
 <script src="/components/navbar/navbar.js" type="module"></script>
 <script src="/components/breadcrumb/breadcumb.js" type="module"></script>
 <script src="/components/footer/footer.js" type="module"></script>
-<script src="search.js" type="module"></script>
+<script src="wishlist.js" type="module"></script>
 
 
 </body>
