Next/preview - Loading svg - Temi search

--- a/public/profile/wishlist/index.html
+++ b/public/profile/wishlist/index.html
@@ -59,15 +59,15 @@ Loading template
     <div class="container text-pink">
         <div class="row">
             <div class="col-6">
-                <button class="previous btn btn-outline-pink" type="button">
-                    <i class="fa fa-arrow-circle-left"></i>
+                <button class="next btn btn-outline-pink navigation-btn rounded-pill" type="button">
+                    <i class="fa fa-angle-left"></i>
                     <span class="ml-2">previous</span>
                 </button>
             </div>
             <div class="col-6 d-flex justify-content-end">
-                <button class="next btn btn-outline-pink" type="button">
+                <button class="next btn btn-outline-pink navigation-btn rounded-pill" type="button">
                     <span class="mr-2">next</span>
-                    <i class="fa fa-arrow-circle-right"></i>
+                    <i class="fa fa-angle-right"></i>
                 </button>
             </div>
         </div>
