--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -16,7 +16,7 @@
 
 <body>
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder" color="pink"></div>
+<div class="breadcrumb-placeholder" color="purple"></div>
 
 
 <div class="container-fluid bg-purple px-0 ">
@@ -36,13 +36,17 @@
             <div class="row mt-3">
                 <div class="col-12 col-md-4">
                     <input type="date" name="date" value=""
-                           class="form-control no-glow  border border-dark bobooky-purple form-control-lg rounded-pill datepicker">
+                           class="form-control no-glow bobooky-purple form-control-lg rounded-pill datepicker">
                 </div>
                 <div class="col-12 mt-3 mt-md-0 col-md">
                     <div class="input-group">
-                        <input type="text" name="q" class="border border-dark form-control form-control-lg rounded-bobooky" placeholder="Search more than 700 books">
+
+
+
+
+                        <input type="text" name="q" class="form-control no-glow bobooky-purple form-control-lg rounded-bobooky border-right-0" placeholder="Search more than 700 books">
                         <div class="input-group-append ">
-                            <button class="btn rounded-bobooky no-glow border border-dark btn-lg search-button" type="button">
+                            <button class="btn border rounded-bobooky no-glow bobooky-purple btn-lg search-button border-left-0" type="button">
                                 <i class="fa fa-search text-dark"></i>
                             </button>
                         </div>
