--- a/public/search/index.html
+++ b/public/search/index.html
@@ -18,15 +18,15 @@
 <body>
 <!--
 Loading template
--->
+
 <div class="loading d-flex flex-column justify-content-center text-white bg-dark">
     <div class="container text-center">
         <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
-        <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
+         <img  class="mt-5" src="/assets/images/logo_vettoriale.svg" style="width:150px" alt="Bobooky"/>
         <h6 class="text-white mt-5">Searching more than 700 books..</h6>
     </div>
 </div>
-
+-->
 
 <div class="nav-placeholder"></div>
 <div class="breadcrumb-placeholder" color="pink"></div>
@@ -36,25 +36,33 @@ Loading template
         <form class="search-form">
             <div class="row">
                 <div class="col-12 col-xl-6">
-                    <input type="search" name="q" value="" class="form-control no-glow bobooky-pink form-control-lg rounded-pill search-bar"
-                           placeholder="Search more than 700 books..">
+
+                    <div class="input-group">
+                        <input type="search" name="q" value="" class="form-control no-glow bobooky-pink form-control-lg rounded-bobooky search-bar border-right-0"
+                               placeholder="Search more than 700 books..">
+                        <div class="input-group-append ">
+                            <button class="btn border no-glow search-button rounded-bobooky border-left-0 pr-4" type="button">
+                                <i class="fa fa-search text-dark"></i>
+                            </button>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col-12 col-xl-6 d-flex justify-content-between mt-3 mt-xl-0">
                     <select name="orderby"
-                            class="text-capitalize form-control no-glow custom-select custom-select-lg bg-dark rounded-pill text-white mr-3 filter orderby">
+                            class="text-capitalize form-control no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white mr-3 filter orderby">
                         <option selected value="default">order by</option>
                         <option value="price">price</option>
                         <option value="author">author</option>
                         <option value="name">name</option>
                         <option value="year">year</option>
-
                     </select>
                     <select name="genre"
-                            class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white mx-3 filter genre">
+                            class="text-capitalize form-control no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white mx-3 filter genre">
                         <option selected value="default">genre</option>
                     </select>
                     <select name="theme"
-                            class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white ml-3 filter theme">
+                            class="text-capitalize form-control no-glow custom-select custom-select-lg bg-dark rounded-pill text-white ml-3 filter theme">
                         <option selected value="default">theme</option>
                     </select>
                 </div>
@@ -86,13 +94,13 @@ Loading template
     <div class="container text-pink">
         <div class="row">
             <div class="col-6">
-                <button class="previous btn btn-outline-pink rounded-pill" type="button">
+                <button class="previous btn btn-outline-pink navigation-btn rounded-pill" type="button">
                     <i class="fa fa-angle-left"></i>
                     <span class="ml-2">previous</span>
                 </button>
             </div>
             <div class="col-6 d-flex justify-content-end">
-                <button class="next btn btn-outline-pink rounded-pill" type="button">
+                <button class="next btn btn-outline-pink navigation-btn rounded-pill" type="button">
                     <span class="mr-2">next</span>
                     <i class="fa fa-angle-right"></i>
                 </button>
