--- a/public/search/more/index.html
+++ b/public/search/more/index.html
@@ -22,7 +22,7 @@ Loading template
 <div class="loading d-flex flex-column justify-content-center text-white bg-dark">
     <div class="container text-center">
         <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
-        <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
+        <img  class="mt-5" src="/assets/images/logo_vettoriale.svg" style="width:150px" alt="Bobooky"/>
         <h6 class="text-white mt-5">Don't worry, it won't take long..</h6>
     </div>
 </div>
@@ -43,7 +43,7 @@ Loading template
                 </div>
                 <div class="col-12 col-md-auto px-0">
                     <select name="orderby"
-                            class="text-capitalize form-control no-glow custom-select custom-select-lg bg-dark rounded-pill text-white filter orderby">
+                            class="text-capitalize form-control no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white filter orderby">
                         <option selected value="default">order by</option>
                         <option value="price">price</option>
                         <option value="author">author</option>
@@ -70,15 +70,15 @@ Loading template
     <div class="container text-pink">
         <div class="row">
             <div class="col-6">
-                <button class="previous btn btn-outline-pink" type="button">
-                    <i class="fa fa-arrow-circle-left"></i>
+                <button class="previous btn btn-outline-pink navigation-btn rounded-pill" type="button">
+                    <i class="fa fa-angle-left"></i>
                     <span class="ml-2">previous</span>
                 </button>
             </div>
             <div class="col-6 d-flex justify-content-end">
-                <button class="next btn btn-outline-pink" type="button">
+                <button class="next btn btn-outline-pink navigation-btn rounded-pill" type="button">
                     <span class="mr-2">next</span>
-                    <i class="fa fa-arrow-circle-right"></i>
+                    <i class="fa fa-angle-right"></i>
                 </button>
             </div>
         </div>
