--- a/public/search/theme/index.html
+++ b/public/search/theme/index.html
@@ -22,7 +22,7 @@ Loading template
 <div class="loading d-flex flex-column justify-content-center text-white bg-dark">
     <div class="container text-center">
         <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
-        <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
+        <img  class="mt-5" src="/assets/images/logo_vettoriale.svg" style="width:150px" alt="Bobooky"/>
         <h6 class="text-white mt-5">Searching more than 700 books..</h6>
     </div>
 </div>
@@ -42,7 +42,7 @@ Loading template
         </form>
     </div>
 </div>
-<div class="section books shadow-lg pt-5">
+<div class="section books pt-5">
     <div class="container">
         <div class="books-container"></div>
     </div>
@@ -52,15 +52,15 @@ Loading template
     <div class="container text-pink">
         <div class="row">
             <div class="col-6">
-                <button class="previous btn btn-outline-pink" type="button">
-                    <i class="fa fa-arrow-circle-left"></i>
+                <button class="next btn btn-outline-pink navigation-btn rounded-pill" type="button">
+                    <i class="fa fa-angle-left"></i>
                     <span class="ml-2">previous</span>
                 </button>
             </div>
             <div class="col-6 d-flex justify-content-end">
-                <button class="next btn btn-outline-pink" type="button">
+                <button class="next btn btn-outline-pink navigation-btn rounded-pill" type="button">
                     <span class="mr-2">next</span>
-                    <i class="fa fa-arrow-circle-right"></i>
+                    <i class="fa fa-angle-right"></i>
                 </button>
             </div>
         </div>
