--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -35,12 +35,12 @@
             </div>
             <div class="row mt-3">
                 <div class="col-12 col-md-4">
-                    <input type="date" name="date" value=""
+                    <input type="date" name="date" value="" id="form-date"
                            class="form-control no-glow  border border-dark bobooky-purple form-control-lg rounded-pill datepicker">
                 </div>
                 <div class="col-12 mt-3 mt-md-0 col-md">
                     <div class="input-group">
-                        <input type="text" name="q" class="border border-dark form-control form-control-lg rounded-bobooky" placeholder="Search more than 700 books">
+                        <input type="text" name="q" id="form-q" class="border border-dark form-control form-control-lg rounded-bobooky" placeholder="Search more than 700 books">
                         <div class="input-group-append ">
                             <button class="btn rounded-bobooky no-glow border border-dark btn-lg search-button" type="button">
                                 <i class="fa fa-search text-dark"></i>
