--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -23,10 +23,14 @@
     </div>
 </div>
 
-<div class="container h-100" >
+<div class="container h-100">
     <button class="border-0 bg-transparent" onclick="window.history.back();"><h6 class="text-primary py-3">
         <span class="fa fa-arrow-left"></span> back to shop
     </h6></button>
+</div>
+
+<div class="container d-none empty-cart">
+    <h1>The cart is empty</h1>
 </div>
 
 <div class="fixed-bottom vw-100 shadow d-block d-lg-none">
@@ -38,7 +42,7 @@
                         <h6>Subtotal + delivery:</h6>
                     </div>
                     <div class="row">
-                        <h5 class="summary-subtotal">€ 45.00</h5> <h5>+</h5> <h5 class="summary-delivery">€ 2.00</h5>
+                        <h5 class="summary-subtotal">€ 0.00</h5> <h5>+</h5> <h5 class="summary-delivery">free</h5>
                     </div>
                 </div>
             </div>
@@ -64,20 +68,20 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-6"><h5>Subtotal:</h5></div>
-                                <div class="col-6 summary-subtotal">€ 45.00</div>
+                                <div class="col-6 summary-subtotal">€ 0.00</div>
                             </div>
                         </div>
                         <div class="container">
                             <div class="row">
                                 <div class="col-6"><h5>Delivery:</h5></div>
-                                <div class="col-6 summary-delivery">€ 45.00</div>
+                                <div class="col-6 summary-delivery">€ 0.00</div>
                             </div>
                         </div>
                         <div class="col-10 border-bottom"></div>
                         <div class="container">
                             <div class="row">
                                 <div class="col-6"><h5>Total:</h5></div>
-                                <div class="col-6 title font-weight-bold summary-total">€ 45.00</div>
+                                <div class="col-6 title font-weight-bold summary-total">€ 0.00</div>
                             </div>
                         </div>
                     </div>
