--- a/public/register/index.html
+++ b/public/register/index.html
@@ -17,7 +17,7 @@
 <body class="bg-dark">
 
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder" color="pink"></div>
+<div class="breadcrumb-placeholder d-none" color="transparent"></div>
 <div class="section container main text-white">
     <div class="row" id="registration-form">
         <div class="col-12 mt-5">
