--- a/public/profile/order/index.html
+++ b/public/profile/order/index.html
@@ -16,7 +16,7 @@
 
 <body class="bg-dark text-white">
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder" color="pink"></div>
+<div class="breadcrumb-placeholder" color="secondary"></div>
 <div class="container-fluid bg-secondary px-0">
     <div class="container h-100">
         <h5 class="text-white my-auto font-weight-bold py-3">My orders</h5>
