--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -36,13 +36,13 @@
             <div class="row mt-3">
                 <div class="col-12 col-md-4">
                     <input type="date" name="date" value="" id="form-date"
-                           class="form-control no-glow  border border-dark bobooky-purple form-control-lg rounded-pill datepicker">
+                           class="form-control no-glow bobooky-purple form-control-lg rounded-pill datepicker">
                 </div>
                 <div class="col-12 mt-3 mt-md-0 col-md">
                     <div class="input-group">
-                        <input type="text" name="q" id="form-q" class="border border-dark form-control form-control-lg rounded-bobooky" placeholder="Search more than 700 books">
+                        <input type="text" name="q" id="form-q" class="no-glow bobooky-purple form-control form-control-lg rounded-bobooky border-right-0" placeholder="Search more than 700 books">
                         <div class="input-group-append ">
-                            <button class="btn border rounded-bobooky no-glow bobooky-purple btn-lg search-button border-left-0" type="button">
+                            <button class="btn border font-body rounded-bobooky no-glow bobooky-purple btn-lg search-button border-left-0" type="button">
                                 <i class="fa fa-search text-dark"></i>
                             </button>
                         </div>
